# vektara

./: .gitignore  .readthedocs.yaml  README.md  demo.ipynb  demo.py  demo_advanced.py  demo_chunk.py  demo_section.py  demo_simply.py  keys.py  pyproject.toml  setup.cfg
demos/: demo_advanced.py  demo_chunk.py  demo_custom_prompt.py  demo_for_XYZ_chemistry.ipynb  demo_section.py  demo_simple.ipynb  demo_simple.py
docs/: Vectara.rst  _functions.md  conf.py  crash_course.md  functions.rst  index.rst  readme.md  requirements.txt  vectara.rst
docs/_static/: custom.css
docs/source/: conf.py  modules.rst
screenshots/: ffmpeg_mp4_to_gif.sh
src/vectara/: __init__.py  __main__.py  data_types.py
src/vektara/: __init__.py  __main__.py  data_types.py  readme.md
test_data/: consitution_united_states.txt
