[project]
name = "vektara"
version = "0.0.6"
readme = "README.md"
authors = [
    { name = "Forrest Sheng Bao", email = "forrest@vectara.com" }
]
license = { file = "LICENSE" }
description = "An UNofficial Python SDK and CLI for Vectara"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
vektara = "vektara.__main__:main"

[project.urls]
homepage = "https://github.com/forrestbao/vektara"